--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "quill": "^2.0.2",
+    "quill-image-resize-module": "^3.0.0",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
