--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "ckeditor5": "^43.3.1",
+    "ckeditor5-custom-build": "^0.0.6",
     "cloudinary": "^2.5.1",
     "framer-motion": "^11.11.9",
     "mongoose": "^8.8.0",
