added signpu API

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-API_KEY = 873552669442159
-API_SECRET = 99UX-cpdM8l7WQ9pRnqiZc3BdcI
-CLOUD_NAME =  ddcvdeh0s
-MONGO_URL = mongodb+srv://tonwareemizakana:DJu9gHvuUX3MGxwv@gifted-natus-foundation.2m1ob.mongodb.net/?retryWrites=true&w=majority&appName=gifted-natus-foundation
+API_KEY=873552669442159
+API_SECRET=99UX-cpdM8l7WQ9pRnqiZc3BdcI
+CLOUD_NAME=ddcvdeh0s
+MONGO_URL=mongodb+srv://3mtt:admin@cluster0.3ew8xj6.mongodb.net/gifted-natus-foundation
