--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "ckeditor5": "^43.3.1",
     "ckeditor5-custom-build": "^0.0.6",
     "cloudinary": "^2.5.1",
@@ -24,7 +26,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-quill": "^0.0.2",
+    "react-image-file-resizer": "^0.4.8",
+    "react-quill": "^2.0.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
