--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-image-file-resizer": "^0.4.8",
     "react-quill": "^0.0.2",
+    "slugify": "^1.6.6",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
