--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.24.10",
     "quill": "^2.0.2",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-quill": "^0.0.2",
