--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.5.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.9",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.8.0",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
